# ordered-float-macros

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  main.rs
tests/: runtime.rs
tests/ui/fail/: nn32_nan.rs  nn32_nan.stderr  nn64_nan.rs  nn64_nan.stderr  non_const_expr.rs  non_const_expr.stderr
tests/ui/pass/: basic_usage.rs
