[package]
name = "ordered-float-macros"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Naganohara Yoshino <naganohara-yoshino@outlook.com>"]
repository = "https://github.com/naganohara-yoshino/ordered-float-macros"
documentation = "https://docs.rs/ordered-float-macros"
description = "Procedural macros for ordered-float"
keywords = ["ordered-float", "macros"]

[dependencies]
ordered-float = "5.3"
