[package]
name = "ordered-float-macros"
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Naganohara Yoshino <naganohara-yoshino@outlook.com>"]
repository = "https://github.com/naganohara-yoshino/ordered-float-macros"
documentation = "https://docs.rs/ordered-float-macros"
description = "Declarative macros for ordered-float"
keywords = ["ordered-float", "macros", "NotNan", "float"]
readme = "README.md"


[dependencies]
ordered-float = "5.3"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
trybuild = "1.0"
